# dld

./: .gitignore  .lycheeignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  SECURITY.md  cspell.json  fix-worktree-hooks.sh  lychee.toml  pyproject.toml
.claude/: CUSTOMIZATIONS.md  deprecated.json  settings.json
.claude/agents/: coder.md  diary-recorder.md  documenter.md  planner.md  review.md  scout.md
.claude/contracts/: upgrade-contract.md
.claude/hooks/: hooks.config.local.mjs  post-edit.mjs  pre-bash.mjs  pre_edit.py  prompt-guard.mjs  prompt_guard.py  run-hook.mjs
.claude/rules/: architecture.md  dependencies.md  localization.md  model-capabilities.md  template-sync.md
.claude/scripts/: autopilot-state.mjs  eval-agents.mjs  test-wrapper.mjs  upgrade.mjs
.git-hooks/: pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md  showcase.md
.github/workflows/: ci.yml  npm-publish.yml  smoke-test.yml  test.yml
ai/: backlog.md  ideas.md
ai/architect/: architecture-agenda.md  architectures.md  critique-data.md  critique-devil.md  critique-domain.md  critique-dx.md  critique-evolutionary.md  critique-llm.md  critique-ops.md  critique-security.md  multi-project-orchestrator.md  orchestrator-final-state.md  research-data.md  (+4 more)
assets/: README.md  comparison-table.md
docs/: 00-bootstrap.md  01-principles.md  02-naming.md  03-project-structure.md  04-claude-md-template.md  05-domain-template.md  06-cross-domain.md  07-antipatterns.md  08-metrics.md  09-onboarding.md  10-testing.md  11-ci-cd.md  12-docker.md  13-migration.md  14-suggested-domains.md  15-skills-setup.md  16-forbidden.md  17-backlog-management.md  18-spec-template.md  19-living-architecture.md  20-mcp-setup.md  21-mcp-troubleshooting.md  22-native-language-triggers.md  installation-guide.md
examples/version-endpoint/: .env.example  config.py  main.py  pyproject.toml  test_version.py
scripts/: autopilot-loop.sh  check-sync.sh  pre-review-check.py  setup-mcp.sh  smoke-test.sh
template/: .gitignore  .mcp.json.example  CLAUDE.md  README.md  pyproject.toml  stryker.config.mjs
tests/: conftest.py  test_hooks_utils.py  test_post_edit.py  test_pre_bash.py  test_pre_edit.py  test_prompt_guard.py
(+878 files in other folders)
