[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dld"
version = "3.15.2"
requires-python = ">=3.10"
description = "Double-Loop Development — AI-native development methodology"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "ai",
    "template",
    "node_modules",
    ".worktrees",
    "scripts/vps/venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test files need `sys.path.insert(...)` between stdlib imports and local imports
"tests/**/*.py" = ["E402", "I001"]
"scripts/vps/tests/**/*.py" = ["E402", "I001"]

[tool.coverage.run]
source = ["scripts/vps"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "scripts/vps/tests/*",
    "scripts/vps/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "pass  # nosec",
]
