[project]
name = "version-endpoint"
version = "1.0.0"
description = "FastAPI version endpoint example"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic-settings",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"
